2004-06-18  Todd Berman  <tberman@off.net>

	* Gui/Workbench/Layouts/SdiWorkspaceLayout.cs: cleanups, and a small
	icon related fixup.

2004-06-18  Todd Berman  <tberman@off.net>

	* Commands/MenuItemBuilders.cs: clean up accel path code.
	* Gui/Workbench/Layouts/SdiWorkspaceLayout.cs: reduce code complexity
	by removing the extra ArrayList. Also properly use the tab reordering
	event, closes bug #60356.

2004-06-17  John Luke  <jluke@cfl.rr.com>

	* Commands/ProjectBrowserCommands/ResourceFolderNodeCommands.cs:
	* Commands/ProjectBrowserCommands/FolderNodeCommands.cs:
	* Commands/ProjectBrowserCommands/CombineNodeCommands.cs:
	* Commands/FileCommands.cs:
	* Gui/Dialogs/OptionPanels/ExternalToolPanel.cs:
	* Gui/Dialogs/ReferenceDialog/AssemblyReferencePanel.cs:
	* Internal/Project/Project/AbstractProject.cs:
	* Internal/Project/Combine/Combine.cs:
	* Gui/Dialogs/OptionPanels/ProjectOptions/DeployFileOptions.cs:
	use MonoDevelop.Gui.Widgets.FileSelector instead of Gtk.FileSelection

	* Gui/Pads/HelpBrowser/HelpViewer.cs: set IsViewOnly property to true
	so we don't crash on save

	* Gui/Pads/ProjectBrowser/BrowserNode/FileNode.cs:
	do not force an extension on renamed files
	fixes bug # 59677

	* Commands/FileCommands.cs: workaround for #59731

2004-06-16  John Luke  <jluke@cfl.rr.com>

	* Gui/Dialogs/NewProjectDialog.cs: guard against unauthorized
	exception when creating the project directory, and display an error
	message and allow the user to fix it.
	fixes bug # 60001

2004-06-13  Todd Berman  <tberman@sevenl.net>

	* Internal/Project/Project/Deployment/ScriptDeploy.cs: string fix

2004-06-11  Todd Berman  <tberman@sevenl.net>

	* Services/SystemAssemblyService.cs: Dont scan the same path twice.

2004-06-10  Lluis Sanchez Gual  <lluis@ximian.com>

	* Commands/ProjectBrowserCommands/FolderNodeCommands.cs: Set the project of
	  newly added files.
	* Services/ParserService/DefaultParserService.cs: Generate and cache code