@@ -1,3 +1,7 @@
+2004-06-20  Todd Berman  <tberman@off.net>
+
+	* Gui/Workbench/Layouts/SdiWorkspaceLayout.cs: fix bug #60352.
+
 2004-06-18  Todd Berman  <tberman@off.net>
 
 	* Gui/Workbench/Layouts/SdiWorkspaceLayout.cs: cleanups, and a small
